update contact info

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         <p>
                             海宁泛半导产业园区<br>
                             <strong>Phone:</strong> 150-1266-7955<br>
-                            <strong>Email:</strong> <span style="text-transform:none;">tom_wang@dhmicroelec.com</span><br><br>
+                            <strong>Email:</strong> <span style="text-transform:none;">tom_wang@dhmicroelec.com</span><br>
                             <strong>Address:</strong> 浙江省海宁市海昌街道漕河泾路17号<br>产业园四期6号楼2楼2044
                         </p>
 
