--- a/service.html
+++ b/service.html
@@ -105,11 +105,11 @@
                   <div class="col-lg-4 col-md-12 footer-links">
                       <h4>关于我们</h4>
                       <ul>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#">首页</a></li>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#about">关于我们</a></li>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#technique">领先技术</a></li>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#services">服务项目</a></li>
-                          <li><i class="ion-ios-arrow-forward"></i> <a href="#partners">合作伙伴</a></li>
+                          <li><i class="ion-ios-arrow-forward"></i> <a href="index.html">首页</a></li>
+                          <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#about">关于我们</a></li>
+                          <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#technique">领先技术</a></li>
+                          <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#services">服务项目</a></li>
+                          <li><i class="ion-ios-arrow-forward"></i> <a href="index.html#partners">合作伙伴</a></li>
                       </ul>
                   </div>
 
